--- a/assets/config.toml
+++ b/assets/config.toml
@@ -9,8 +9,9 @@ flowLPM = 2
 primeTimeMillis = 500
 
 [serial]
-comPort = "/dev/ttyACM0"
-baudRate = 57600
+portName = "/dev/ttyUSB1"
+baudRate = 9600
+bufferSize = 1000
 
 # [[pumps]]
 # pin = 6
