cleaned up, using modules

--- a/assets/config.hardware.toml
+++ b/assets/config.hardware.toml
@@ -1,11 +1,13 @@
 [gpio]
     [[gpio.pumps]]
-    pin = 4
+    relayPin = 4
+    sensorPin = 5
     flowLPM = 2
     primeTimeMillis = 500
 
     [[gpio.pumps]]
-    pin = 22
+    relayPin = 22
+    sensorPin = 6
     flowLPM = 2
     primeTimeMillis = 500
 
@@ -13,11 +15,5 @@
 portName = "/dev/ttyUSB1"
 baudRate = 9600
 bufferSize = 1000
-
-    [[serial.soilsensors]]
-    inputPin = 1
-    powerPin = 2
-    [[serial.soilsensors]]
-    inputPin = 3
-    powerPin = 4
+sensorUpdateMillis = 100
 
